version 0.54, stable, January 2 2012, svn 587
	
* Fixed static linking to c-ares

* Disabled IPv6 in Makefile when building curl.
  Somehow that creates issues at Ubuntu.

* Fixed a crashing bug when running with -t option (multi-threading loading).
   Thanks to Shao, Shuchao (Simon) sshao@websense.com for
   finding the issue and providing the initial patch for fixing it.


version 0.53, March 11 2011, svn 584

* Updated to the latest libcurl, libevent and c-ares;

* Fixed compilation issue at Fedora-8 with 
    extern declaration of pread in parse_conf.c;

* Added patch providing URL randomization.
  Thanks to Pranav Desai <pranavadesai@gmail.com> for this patch.

	
version 0.52, stable, June 12 2010, svn 578
	
* Probability of using URLs was broken.
   Thanks to Val Shkolnikov <val@nvsoft.net> the patch restoring it back
    and for testing it.

* Loading of configuration files sometimes failed due to passing to strtok
   a char instead of a string.
   Thanks to Val Shkolnikov <val@nvsoft.net> the patch fixing it.

* Some servers are wrong with regards to content length, that they
  are reporting. This happens for some video streaming.
  Added a new tag to ignore server-reported context length.
  Thanks to Pranav Desai <pranavadesai@gmail.com> for this patch


version 0.51, stable, January 18, svn 574

* Releasing a new stable version. The last stable has been release
  in October 2007
* Updated to the most recent libcurl and libevent libraries
* DNS resolving now works via c-ares library.
  Thanks to Val Shkolnikov <val@nvsoft.net> for this suggestion and patch.

version 0.50, unstable, September 21, svn 570

* Advanced to curl-19.6, which is closing dead connections faster
  and contains other important fixes.

By Val Shkolnikov <val@nvsoft.net>

* Added a fixed request rate feature.
  It is a bit risky feature, but "Navigare necesse est ..."
* Fixed a bug for fixed-rate, where curl-loader would not stop on run time 
  expiration or url completion
