@@ -22,3 +22,4 @@ jari pietila <jari2004@hotmail.com>
 Val Shkolnikov <val@nvsoft.net> - major contribution of operational statistics and fixed rate load
 Pranav Desai <pranavadesai@gmail.com> - added URL-randomization
 Shao, Shuchao (Simon) sshao@websense.com
+Wei Guo, weiguo85@gmail.com
